2008-10-14  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/bjc600.xml, driver/bjc800.xml: Modified command line
	  prototype so that "gs" call is not in the beginning. This way
	  foomatic-rip (varsion 4 or newer) always feeds in PostScript
	  and never PDF. With PDF Ghostscript crashes with these drivers
	  (http://bugs.ghostscript.com/show_bug.cgi?id=690032).

	* db/source/opt/207.xml: Some printers were put into the wrong device
	  class for the "pcl3" driver.

	* driver/appledmp.xml, driver/bj8gc12f.upp.xml,
	  driver/bj8hg12f.upp.xml, driver/bj8oh06n.upp.xml,
	  driver/bj8pa06n.upp.xml, driver/bj8pp12f.upp.xml,
	  driver/bj8ts06n.upp.xml, driver/bjc600.xml,
	  driver/bjc610a0.upp.xml, driver/bjc610a1.upp.xml,
	  driver/bjc610a2.upp.xml, driver/bjc610a3.upp.xml,
	  driver/bjc610a4.upp.xml, driver/bjc610a5.upp.xml,
	  driver/bjc610a6.upp.xml, driver/bjc610a7.upp.xml,
	  driver/bjc610a8.upp.xml, driver/bjc610b1.upp.xml,
	  driver/bjc610b2.upp.xml, driver/bjc610b3.upp.xml,
	  driver/bjc610b4.upp.xml, driver/bjc610b6.upp.xml,
	  driver/bjc610b7.upp.xml, driver/bjc610b8.upp.xml,
	  driver/bjc800.xml, driver/cdj1600.xml, driver/cdj500.xml,
	  driver/cdj550.upp.xml, driver/cdj550.xml, driver/cdj670.xml,
	  driver/cdj850.xml, driver/cdj880.xml, driver/cdj890.xml,
	  driver/declj250.xml, driver/necp2x.upp.xml,
	  driver/necp2x6.upp.xml, driver/pj.xml, driver/pjxl.xml,
	  driver/pjxl300.xml, driver/ras1.upp.xml, driver/ras24.upp.xml,
	  driver/ras3.upp.xml, driver/ras32.upp.xml, driver/ras4.upp.xml,
	  driver/ras8m.upp.xml, driver/sparc.xml, driver/st640ih.upp.xml,
	  driver/st640ihg.upp.xml, driver/st640p.upp.xml,
	  driver/st640pg.upp.xml, driver/st640pl.upp.xml,
	  driver/st640plg.upp.xml, driver/stc.upp.xml,
	  driver/stc1520h.upp.xml, driver/stc2.upp.xml,
	  driver/stc2_h.upp.xml, driver/stc2s_h.upp.xml,
	  driver/stc300.upp.xml, driver/stc300bl.upp.xml,
	  driver/stc300bm.upp.xml, driver/stc500p.upp.xml,
	  driver/stc500ph.upp.xml, driver/stc600ih.upp.xml,