@@ -26,7 +26,7 @@
    <id>printer/HP-DeskJet_500C</id><!-- HP DeskJet 500C -->
   </printer>
   <printer>
-   <id>printer/HP-DeskJet_540C</id><!-- HP DeskJet 540C -->
+   <id>printer/HP-DeskJet_540</id><!-- HP DeskJet 540 -->
   </printer>
   <printer>
    <id>printer/Olivetti-JP350S</id><!-- Olivetti JP350S -->
