@@ -8,6 +8,9 @@
  
  <printers>
   <printer>
+   <id>printer/HP-DeskJet_540C</id><!-- HP DeskJet 540C -->
+  </printer>
+  <printer>
    <id>printer/HP-DeskJet_550C</id><!-- HP DeskJet 550C -->
   </printer>
   <printer>
