@@ -20,6 +20,9 @@
    <id>printer/HP-DeskJet_320</id><!-- HP DeskJet 320 -->
   </printer>
   <printer>
+   <id>printer/HP-DeskJet_540C</id><!-- HP DeskJet 540C -->
+  </printer>
+  <printer>
    <id>printer/HP-DeskJet_550C</id><!-- HP DeskJet 550C -->
   </printer>
   <printer>
