@@ -41,10 +41,13 @@
    <id>printer/HP-OfficeJet_350</id>
   </printer>
   <printer>
-   <id>printer/HP-DeskJet_540C</id><!-- HP DeskJet 540C -->
+   <id>printer/HP-DeskJet_540</id><!-- HP DeskJet 540 -->
    <comments>
     <en>For black-only printing.</en>
    </comments>
+  </printer>
+  <printer>
+   <id>printer/HP-DeskJet_540C</id><!-- HP DeskJet 540C -->
   </printer>
   <printer>
    <id>printer/HP-DeskJet_550C</id><!-- HP DeskJet 550C -->
