@@ -945,6 +945,9 @@
    <id>printer/HP-DeskJet_520</id>
   </printer>
   <printer>
+   <id>printer/HP-DeskJet_540</id>
+  </printer>
+  <printer>
    <id>printer/HP-DeskJet_540C</id>
   </printer>
   <printer>
