@@ -12770,7 +12770,7 @@
   </printer>
   <!-- gutenprint driver: pcl-540 -->
   <printer>
-    <id>printer/HP-DeskJet_540C</id>
+    <id>printer/HP-DeskJet_540</id>
     <margins>
       <general>
         <relative />
@@ -34919,6 +34919,39 @@
     </margins>
   </printer>
   <!-- gutenprint driver: pcl-550 -->
+  <printer>
+    <id>printer/HP-DeskJet_540C</id>
+    <margins>
+      <exception PageSize="Letter">
+        <absolute />
+        <left>18</left>
+        <right>594</right>
+        <top>789</top>
+        <bottom>33</bottom>
+      </exception>
+      <exception PageSize="A4">
+        <absolute />
+        <left>10</left>
+        <right>585</right>
+        <top>837</top>
+        <bottom>33</bottom>
+      </exception>
+      <exception PageSize="Legal">
+        <absolute />
+        <left>18</left>
+        <right>594</right>
+        <top>1005</top>
+        <bottom>33</bottom>
+      </exception>
+      <exception PageSize="Executive">
+        <absolute />
+        <left>18</left>
+        <right>504</right>
+        <top>753</top>
+        <bottom>33</bottom>
+      </exception>
+    </margins>
+  </printer>
   <printer>
     <id>printer/HP-DeskJet_550C</id>
     <margins>
