@@ -90,6 +90,9 @@
    <id>printer/HP-OfficeJet_350</id>
   </printer>
   <printer>
+   <id>printer/HP-DeskJet_540</id><!-- HP DeskJet 540 -->
+  </printer>
+  <printer>
    <id>printer/HP-DeskJet_540C</id><!-- HP DeskJet 540C -->
   </printer>
   <printer>
