@@ -199,12 +199,17 @@
      </constraint>
      <constraint sense="false">
       <make>HP</make>
+      <model>DeskJet 540C</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
       <model>DeskJet 550C</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
@@ -836,12 +841,17 @@
      </constraint>
      <constraint sense="false">
       <make>HP</make>
+      <model>DeskJet 540C</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
       <model>DeskJet 550C</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
