@@ -100,13 +100,19 @@
      </constraint>
      <constraint sense="true">
       <make>HP</make>
+      <model>DeskJet 540C</model>
+      <driver>pcl3</driver>
+      <arg_defval>ev/1006</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
       <model>DeskJet 550C</model>
       <driver>pcl3</driver>
       <arg_defval>ev/1006</arg_defval>
      </constraint>
      <constraint sense="true">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <driver>pcl3</driver>
       <arg_defval>ev/1005</arg_defval>
      </constraint>
@@ -748,7 +754,7 @@
      </constraint>
      <constraint sense="true">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <driver>pcl3</driver>
       <arg_defval>ev/1005</arg_defval>
      </constraint>
@@ -776,6 +782,12 @@
       <model>PCL 3 Printer</model>
       <driver>pcl3</driver>
       <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
+      <model>DeskJet 540C</model>
+      <driver>pcl3</driver>
+      <arg_defval>ev/1006</arg_defval>
      </constraint>
      <constraint sense="true">
       <make>HP</make>
@@ -1250,13 +1262,19 @@
      </constraint>
      <constraint sense="false">
       <make>HP</make>
+      <model>DeskJet 540C</model>
+      <driver>pcl3</driver>
+      <arg_defval>ev/1006</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
       <model>DeskJet 550C</model>
       <driver>pcl3</driver>
       <arg_defval>ev/1006</arg_defval>
      </constraint>
      <constraint sense="false">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <driver>pcl3</driver>
       <arg_defval>ev/1005</arg_defval>
      </constraint>
