@@ -5,7 +5,7 @@
    <en>Color Mode</en>
   </arg_longname>
   <arg_shortname>
-   <en>ColorMode</en><!-- backends only know <en> shortnames! -->
+   <en>ColorModel</en><!-- backends only know <en> shortnames! -->
   </arg_shortname>
   <arg_execution>
    <arg_group>General</arg_group>
@@ -75,13 +75,19 @@
      </constraint>
      <constraint sense="true">
       <make>HP</make>
+      <model>DeskJet 540C</model>
+      <driver>pcl3</driver>
+      <arg_defval>ev/1023</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
       <model>DeskJet 550C</model>
       <driver>pcl3</driver>
       <arg_defval>ev/1023</arg_defval>
      </constraint>
      <constraint sense="true">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <driver>pcl3</driver>
       <arg_defval>ev/1021</arg_defval>
      </constraint>
@@ -373,7 +379,7 @@
      </constraint>
      <constraint sense="false">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
@@ -508,12 +514,17 @@
      </constraint>
      <constraint sense="false">
       <make>HP</make>
+      <model>DeskJet 540C</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
       <model>DeskJet 550C</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
