@@ -27,6 +27,11 @@
      </constraint>
      <constraint sense="false">
       <driver>pcl3</driver>
+      <printer>printer/HP-DeskJet_540</printer>
+      <arg_defval>0</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <driver>pcl3</driver>
       <printer>printer/HP-DeskJet_540C</printer>
       <arg_defval>0</arg_defval>
      </constraint>
