@@ -59,13 +59,19 @@
      </constraint>
      <constraint sense="true">
       <make>HP</make>
+      <model>DeskJet 540C</model>
+      <driver>pcl3</driver>
+      <arg_defval>ev/1062</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
       <model>DeskJet 550C</model>
       <driver>pcl3</driver>
       <arg_defval>ev/1062</arg_defval>
      </constraint>
      <constraint sense="true">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <driver>pcl3</driver>
       <arg_defval>ev/1062</arg_defval>
      </constraint>
