@@ -40,13 +40,19 @@
      </constraint>
      <constraint sense="true">
       <make>HP</make>
+      <model>DeskJet 540C</model>
+      <driver>hpdj</driver>
+      <arg_defval>ev/121</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
       <model>DeskJet 550C</model>
       <driver>hpdj</driver>
       <arg_defval>ev/121</arg_defval>
      </constraint>
      <constraint sense="true">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <driver>hpdj</driver>
       <arg_defval>ev/120</arg_defval>
      </constraint>
