@@ -149,13 +149,19 @@
      </constraint>
      <constraint sense="false">
       <make>HP</make>
+      <model>DeskJet 540C</model>
+      <driver>pcl3</driver>
+      <arg_defval>ev/130</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
       <model>DeskJet 550C</model>
       <driver>pcl3</driver>
       <arg_defval>ev/130</arg_defval>
      </constraint>
      <constraint sense="false">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <driver>pcl3</driver>
       <arg_defval>ev/130</arg_defval>
      </constraint>
@@ -541,13 +547,19 @@
      </constraint>
      <constraint sense="true">
       <make>HP</make>
+      <model>DeskJet 540C</model>
+      <driver>hpdj</driver>
+      <arg_defval>ev/130</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
       <model>DeskJet 550C</model>
       <driver>hpdj</driver>
       <arg_defval>ev/130</arg_defval>
      </constraint>
      <constraint sense="true">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <driver>hpdj</driver>
       <arg_defval>ev/130</arg_defval>
      </constraint>
@@ -901,12 +913,17 @@
      </constraint>
      <constraint sense="false">
       <make>HP</make>
+      <model>DeskJet 540C</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
       <model>DeskJet 550C</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
@@ -2261,12 +2278,17 @@
      </constraint>
      <constraint sense="false">
       <make>HP</make>
+      <model>DeskJet 540C</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
       <model>DeskJet 550C</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
