@@ -17,13 +17,19 @@
   <constraints>
      <constraint sense="true">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <driver>hpdj</driver>
       <arg_defval>ev/137</arg_defval>
      </constraint>
      <constraint sense="true">
       <make>HP</make>
       <model>DeskJet 560C</model>
+      <driver>hpdj</driver>
+      <arg_defval>ev/139</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
+      <model>DeskJet 540C</model>
       <driver>hpdj</driver>
       <arg_defval>ev/139</arg_defval>
      </constraint>
@@ -184,7 +190,7 @@
     <constraints>
      <constraint sense="false">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <driver>hpdj</driver>
       <arg_defval>na</arg_defval>
      </constraint>
@@ -259,13 +265,19 @@
     <constraints>
      <constraint sense="false">
       <make>HP</make>
-      <model>DeskJet 540C</model>
+      <model>DeskJet 540</model>
       <driver>hpdj</driver>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
       <make>HP</make>
       <model>DeskJet 560C</model>
+      <driver>hpdj</driver>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>DeskJet 540C</model>
       <driver>hpdj</driver>
       <arg_defval>na</arg_defval>
      </constraint>
