@@ -1,6 +1,6 @@
-<printer id="printer/HP-DeskJet_540C">
+<printer id="printer/HP-DeskJet_540">
   <make>HP</make>
-  <model>DeskJet 540C</model>
+  <model>DeskJet 540</model>
   <mechanism>
     <inkjet/>
     <color/>
@@ -12,11 +12,10 @@
     </resolution>
     <consumables>
       <comments>
-        <en>two cartridges, include printhead</en>
+        <en>BW or Color Cartidge with printhead</en>
       </comments>
     <!--one or more "partno" elements.--></consumables>
-  </mechanism>
-  <url>http://www.hp.com/</url>
+  </mechanism><!--no "url"-->
   <lang>
     <pcl level="3"/><!--no pjl-->
     <text>
@@ -24,20 +23,19 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <parallel>
+      <commandset>MLC,PCL,PML</commandset>
+      <description>Hewlett-Packard DeskJet 540</description>
+      <manufacturer>HEWLETT-PACKARD</manufacturer>
+      <model>DESKJET 540</model>
+    </parallel>
+  </autodetect>
   <functionality>A</functionality>
-  <driver>gutenprint</driver>
+  <driver>hpijs</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>
-    Works fine with ghostscript.&lt;p&gt;
-
-    This model uses both color and bw cartridges. It cannot really mix
-    black with the other colours, but only print them side by side
-    (CMY+K mode). See the man page of the
-    &quot;pcl3&quot;/&quot;hpdj&quot; driver packages (&quot;man
-    gs-pcl3&quot;/&quot;man gs-hpdj&quot;).&lt;p&gt;
-
+    
     For basic printing functionality use the &lt;a 
     href=&quot;http://hplip.sf.net/&quot;&gt;HPIJS 
     driver &lt;/a&gt;. For advanced functionality such
@@ -45,7 +43,8 @@
     &lt;a href=&quot;http://hplip.sf.net/&quot;&gt;
     HPLIP driver&lt;/a&gt; (which includes HPIJS). &lt;p&gt;
     
-    Works with uniprint driver cdj550.upp, too.
+    One printer cartridge at a time, black or CMY. Mostly like Deskjet
+    500C.
     </en>
   </comments>
 </printer>
