@@ -1,3 +1,15 @@
+2008-10-15  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/HP-DeskJet_540C.xml, printer/HP-DeskJet_540.xml,
+	  driver/cdj500.xml, driver/cdj550.upp.xml, driver/cdj550.xml,
+	  driver/djet500.xml, driver/gimp-print.xml,
+	  driver/gutenprint.xml, driver/gutenprint52.xml, driver/hpdj.xml,
+	  driver/pcl3.xml, opt/159.xml, opt/207.xml, opt/208.xml,
+	  opt/217.xml, opt/218.xml, opt/220.xml, opt/3.xml, opt/6.xml,
+	  opt/7.xml: HP DeskJet 540 and HP DeskJet 540C are different
+	  printers, the former holds only one cartridge at a time, the
+	  latter two. Fixed the entries and the data to get proper PPDs.
+
 2008-10-14  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/bjc600.xml, driver/bjc800.xml: Modified command line
